--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
