--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,6 @@
 name: Build and Deploy
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -22,4 +23,4 @@ jobs:
           folder: dist
 
 env:
-  VUE_APP_BASE_URL: /Upsilon-Workshop/
+  VUE_APP_PUBLIC_PATH: /Upsilon-Workshop/
