--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
