--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.6.0",
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.2.2",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
