--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.5",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
