--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.6.0",
     "@mdi/font": "5.9.55",
+    "monaco-editor": "^0.34.0",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
@@ -24,6 +25,7 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "^0.40.4"
