--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@mdi/font": "5.9.55",
     "monaco-editor": "^0.34.0",
     "roboto-fontface": "*",
+    "uuid": "^9.0.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.0.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@types/node": "^18.11.18",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
