--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "5.9.55",
     "monaco-editor": "^0.34.0",
     "roboto-fontface": "*",
+    "showdown": "^2.1.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
@@ -23,6 +24,8 @@
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@types/node": "^18.11.18",
+    "@types/showdown": "^2.0.0",
+    "@types/uuid": "^9.0.0",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
