--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "monaco-editor": "^0.34.0",
     "roboto-fontface": "*",
     "showdown": "^2.1.0",
+    "upsilon.js": "^1.4.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
