--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "serve": "vite preview",
     "build": "vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.6.0",
     "@mdi/font": "5.9.55",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@types/lodash": "^4.14.191",
     "@vitejs/plugin-vue": "^3.1.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.34.0",
     "pinia": "^2.0.33",
