--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "jdenticon": "^3.2.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.37.1",
     "pinia": "^2.0.33",
