--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/uuid": "^9.0.0",
     "@types/webfontloader": "^1.0.0",
     "typescript": "^4.6.4",
+    "vite-plugin-checker": "^0.6.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "^0.40.4"
