--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-vue": "^9.18.1",
     "jdenticon": "^3.2.0",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.44.0",
     "pinia": "^2.1.7",
